--- a/software/kvm+/software.cfg
+++ b/software/kvm+/software.cfg
@@ -1,7 +1,7 @@
 [buildout]
 extends =
-  https://svn.erp5.org/repos/public/slapos/trunk/software_release/kvm/software.cfg
+  ../kvm/software.cfg
 
 [template]
-url = https://svn.erp5.org/repos/public/slapos/trunk/software_release/kvm+/instance.cfg
+url = ${:_profile_base_location_}/instance.cfg
 md5sum = 4e89ef89dc2d73d05b109183f4e73c79
