kvm : freeze cookbook version

--- a/software/kvm/software.cfg
+++ b/software/kvm/software.cfg
@@ -2,6 +2,8 @@
 extends =
   ../../stack/kvm.cfg
 
+versions = versions
+
 parts +=
   template
 
@@ -11,3 +13,6 @@ url = ${:_profile_base_location_}/instance.cfg
 md5sum = 6dd35876f5877fcab99f8d910058e076
 output = ${buildout:directory}/template.cfg
 mode = 0644
+
+[versions]
+slapos.cookbook = 0.10
