Adding openssh part to mariadb software release

--- a/software/mariadb/software.cfg
+++ b/software/mariadb/software.cfg
@@ -18,6 +18,7 @@ extends =
   ../../component/rdiff-backup/buildout.cfg
   ../../component/lxml-python/buildout.cfg
   ../../stack/shacache-client.cfg
+  ../../component/openssh/buildout.cfg
 
 # Use only quite well working sites.
 allow-hosts =
@@ -40,6 +41,9 @@ parts +=
   libxslt
   eggs
   instance-recipe-egg
+  openssl
+  openssh
+  zlib
 
 # XXX: Workaround of SlapOS limitation
 # Unzippig of eggs is required, as SlapOS do not yet provide nicely working
