--- a/software/mariadb/instance.cfg
+++ b/software/mariadb/instance.cfg
@@ -18,3 +18,4 @@ openssl_binary = ${openssl:location}/bin/openssl
 perl_binary = ${perl:location}/bin/perl
 rdiff_backup_binary = ${buildout:bin-directory}/rdiff-backup
 stunnel_binary = ${stunnel:location}/bin/stunnel
+sshd_binary = ${openssh:location}/sbin/sshd
