--- a/slapos/recipe/kvm/template/port_listening_promise.in
+++ b/slapos/recipe/kvm/template/port_listening_promise.in
@@ -1,4 +1,4 @@
 #!/usr/bin/env sh
 
-"%(check_port_listening_script)" "%(hostname)" "%(ip)"
+"%(check_port_listening_script)s" "%(hostname)s" "%(port)s"
 exit $?
