--- a/software/pull_backup_server/instance.cfg
+++ b/software/pull_backup_server/instance.cfg
@@ -9,7 +9,6 @@ develop-eggs-directory = ${buildout:develop-eggs-directory}
 recipe = ${instance-recipe:egg}:${instance-recipe:module}
 dcrond_binary = ${dcron:location}/sbin/crond
 logrotate_binary = ${logrotate:location}/usr/sbin/logrotate
-openssl_binary = ${openssl:location}/bin/openssl
 rdiff_backup_binary = ${buildout:bin-directory}/rdiff-backup
-ssh_binary = ${openssh:location}/bin/ssh
-ssh_keygen_binary = ${openssh:location}/bin/ssh-keygen
+dropbear_client_binary = ${dropbear:location}/bin/dbclient
+dropbear_keygen_binary = ${dropbear:location}/bin/dropbearkey
