Add ipv6 patch for dropbear
Took here :
<https://lists.openwrt.org/pipermail/openwrt-devel/2009-May/004299.html>

--- a/component/dropbear/buildout.cfg
+++ b/component/dropbear/buildout.cfg
@@ -18,6 +18,13 @@ url = ${:_profile_base_location_}/${:filename}
 filename = userspace.patch
 download-only = true
 
+[dropbear-ipv6-patch]
+recipe = hexagonit.recipe.download
+md5sum = b30dd58d68829a80eee69188134382ef
+url = ${:_profile_base_location_}/${:filename}
+filename = ipv6-support.patch
+download-only = true
+
 [dropbear]
 recipe = hexagonit.recipe.cmmi
 md5sum = 0284ea239083f04c8b874e08e1aca243
@@ -30,6 +37,7 @@ configure-options =
 
 patches=
   ${dropbear-userspace-patch:location}/${dropbear-userspace-patch:filename}
+  ${dropbear-ipv6-patch:location}/${dropbear-ipv6-patch:filename}
 
 patch-options=
   -p1
