Minor: Dropbear buildout fine tuning

--- a/component/dropbear/buildout.cfg
+++ b/component/dropbear/buildout.cfg
@@ -32,8 +32,8 @@ url = http://matt.ucc.asn.au/dropbear/dropbear-0.53.1.tar.bz2
 
 configure-options =
   --prefix=${buildout:parts-directory}/${:_buildout_section_name_}
-  --with-zlib=${zlib:location}/lib
-  CFLAGS="-DENABLE_SINGLEUSER -I${zlib:location}/include"
+  --with-zlib=${zlib:location}
+  CFLAGS="-DENABLE_SINGLEUSER"
 
 patches=
   ${dropbear-userspace-patch:location}/${dropbear-userspace-patch:filename}
