Linking dropbear with slapos zlib

--- a/component/dropbear/buildout.cfg
+++ b/component/dropbear/buildout.cfg
@@ -33,7 +33,11 @@ url = http://matt.ucc.asn.au/dropbear/dropbear-0.53.1.tar.bz2
 configure-options =
   --prefix=${buildout:parts-directory}/${:_buildout_section_name_}
   --with-zlib=${zlib:location}
-  CFLAGS="-DENABLE_SINGLEUSER"
+  CFLAGS="-DENABLE_SINGLEUSER "
+
+environment =
+  CPPFLAGS =-I${zlib:location}/include
+  LDFLAGS =-Wl,-rpath=${zlib:location}/lib -L${zlib:location}/lib
 
 patches=
   ${dropbear-userspace-patch:location}/${dropbear-userspace-patch:filename}
