Switch mariadb to dropbear

--- a/software/mariadb/instance.cfg
+++ b/software/mariadb/instance.cfg
@@ -18,5 +18,5 @@ openssl_binary = ${openssl:location}/bin/openssl
 perl_binary = ${perl:location}/bin/perl
 rdiff_backup_binary = ${buildout:bin-directory}/rdiff-backup
 stunnel_binary = ${stunnel:location}/bin/stunnel
-sshd_binary = ${openssh:location}/sbin/sshd
-ssh_keygen_binary = ${openssh:location}/bin/ssh-keygen
+dropbear_server_binary = ${dropbear:location}/sbin/dropbear
+dropbear_keygen_binary = ${dropbear:location}/bin/dropbearkey
