--- a/software/mariadb/instance.cfg
+++ b/software/mariadb/instance.cfg
@@ -18,5 +18,4 @@ openssl_binary = ${openssl:location}/bin/openssl
 perl_binary = ${perl:location}/bin/perl
 rdiff_backup_binary = ${buildout:bin-directory}/rdiff-backup
 stunnel_binary = ${stunnel:location}/bin/stunnel
-dropbear_server_binary = ${dropbear:location}/sbin/dropbear
-dropbear_keygen_binary = ${dropbear:location}/bin/dropbearkey
+duplicity_binary = ${buildout:bin-directory}/duplicity
