--- a/component/duplicity/buildout.cfg
+++ b/component/duplicity/buildout.cfg
@@ -9,14 +9,14 @@ parts =
 recipe = slapos.recipe.build
 url = http://code.launchpad.net/duplicity/0.6-series/0.6.15/+download/duplicity-0.6.15.tar.gz
 md5sum = 88f3c990f41fde86cd7d5af5a1bc7b81
-patch = ${:_profile_base_location_}/duplicity-ipv6.patch 278873b57a9dd1d3157f02b88f87d540
+patch = ${:_profile_base_location_}/duplicity-ipv6.patch 32c44816a9a59401e233ef622bf50223
 script = 
   import os
   import tempfile
   import sys
   workingdir = guessworkdir(self.extract(self.download(%(url)r, %(md5sum)r)))
   os.chdir(workingdir)
-  self.applyPatchList('${:patch}', patch_binary='${patch:location}/bin/patch', cwd=workingdir)
+  self.applyPatchList('${:patch}', patch_binary='${patch:location}/bin/patch', patch_options='-p0', cwd=workingdir)
   call([sys.executable, os.path.join(workingdir, 'setup.py'),
        'build_ext',
        '--include-dirs', os.path.join('${librsync:location}', 'include'),
