--- a/software/mariadb/software.cfg
+++ b/software/mariadb/software.cfg
@@ -17,6 +17,8 @@ extends =
   ../../component/rdiff-backup/buildout.cfg
   ../../component/lxml-python/buildout.cfg
   ../../stack/shacache-client.cfg
+  ../../component/gzip/buildout.cfg
+  ../../component/bash/buildout.cfg
   ../../component/duplicity/buildout.cfg
 
 # Use only quite well working sites.
@@ -38,6 +40,10 @@ parts +=
 #TODO : list here all parts.
   template
   eggs
+  bash
+  gzip
+  rdiff-backup
+  import_script
   instance-recipe-egg
 
 # XXX: Workaround of SlapOS limitation
@@ -54,6 +60,13 @@ section = python2.7
 egg = slapos.cookbook
 module = mysql
 
+[import_script]
+recipe = hexagonit.recipe.download
+url = ${:_profile_base_location_}/${:filename}
+md5sum = 05bd69a5a56c615d1ddd98c1114eb7db
+filename = import-script.sh
+download-only = true
+
 [instance-recipe-egg]
 recipe = zc.recipe.egg
 python = python2.7
@@ -69,9 +82,10 @@ eggs =
 # Default template for the instance.
 recipe = slapos.recipe.template
 url = ${:_profile_base_location_}/instance.cfg
-md5sum = ae477237183657c372ce47ad303d53b2
+md5sum = 84022783e6c187a6847505d98cbfa275
 output = ${buildout:directory}/template.cfg
 mode = 0644
+dollar = $
 
 [versions]
 slapos.cookbook = 0.9
