Experiment on slapos.cookbook generic recipes

--- a/component/dcron/buildout.cfg
+++ b/component/dcron/buildout.cfg
@@ -8,6 +8,20 @@ url = ${:_profile_base_location_}/${:filename}
 filename = dcron-4.4.noroot.no.globals.patch
 download-only = true
 
+[dcron-catcher]
+recipe = hexagonit.recipe.download
+md5sum = 9acaf7a7ee0d6409399380ccae6f098d
+url = ${:_profile_base_location_}/${:filename}
+filename = catcher.py
+download-only = true
+
+[cron_d]
+recipe = hexagonit.recipe.download
+md5sum =
+url = ${:_profile_base_location_}/${:filename}
+filename = crond.in
+download-only = true
+
 [dcron]
 recipe = hexagonit.recipe.cmmi
 url = http://www.jimpryor.net/linux/releases/dcron-4.4.tar.gz
