--- a/component/logrotate/buildout.cfg
+++ b/component/logrotate/buildout.cfg
@@ -21,3 +21,10 @@ configure-command = true
 make-options = PREFIX=${buildout:parts-directory}/${:_buildout_section_name_} 
 environment =
   POPT_DIR=${popt:location}/include -L${popt:location}/lib -Wl,-rpath=${popt:location}/lib
+
+[logrotate_conf]
+recipe = hexagonit.recipe.download
+url = ${:_profile_base_location_}/${:filename}
+download-only = true
+md5sum = 6beac248c978b767d4bccc1b7eebe6bd
+filename = logrotate.in
