--- a/software/mariadb/software.cfg
+++ b/software/mariadb/software.cfg
@@ -80,9 +80,9 @@ eggs =
 
 [template]
 # Default template for the instance.
-recipe = slapos.recipe.template
+recipe = slapos.recipe.template:fragments
 url = ${:_profile_base_location_}/instance.cfg
-md5sum = 84022783e6c187a6847505d98cbfa275
+md5sum = 6f451692e3c5305179a7773fd61c492e
 output = ${buildout:directory}/template.cfg
 mode = 0644
 dollar = $
@@ -100,6 +100,8 @@ setuptools = 0.6c12dev-r88795
 hexagonit.recipe.cmmi = 1.5.0
 hexagonit.recipe.download = 1.5.0
 plone.recipe.command = 1.1
+collective.recipe.patch = 0.2.2
 
 # Use SlapOS patched zc.buildout
 zc.buildout = 1.5.3-dev-SlapOS-005
+slapos.libnetworkcache = 0.3
