Partially revert 3728936e6a1b2728bcdefc70298bb4adb69a777e in order to clean the git history.

--- a/software/mariadb/software.cfg
+++ b/software/mariadb/software.cfg
@@ -2,6 +2,7 @@
 
 extensions =
   slapos.zcbworkarounds
+  slapos.rebootstrap
 
 find-links +=
     http://www.nexedi.org/static/packages/source/slapos.buildout/
@@ -37,6 +38,7 @@ parts +=
 # Create instance template
 #TODO : list here all parts.
   template
+  libxslt
   eggs
   instance-recipe-egg
 
