--- a/software/davstorage/software.cfg
+++ b/software/davstorage/software.cfg
@@ -10,6 +10,7 @@ extends =
   ../../component/dcron/buildout.cfg
    ../../component/logrotate/buildout.cfg
   ../../stack/shacache-client.cfg
+  ../../component/lxml-python/buildout.cfg
   ../../component/python-2.7/buildout.cfg
 
 # Use only quite well working sites.
@@ -27,6 +28,7 @@ allow-hosts =
 
 parts =
   template
+  lxml-python
   apache
   logrotate
   dcron
@@ -56,6 +58,9 @@ url = ${:_profile_base_location_}/instance.cfg
 md5sum = 51b6213889573ae7b1dec0bd65384432
 output = ${buildout:directory}/template.cfg
 mode = 0644
+
+[lxml-python]
+python = python2.7
 
 [versions]
 zc.buildout = 1.5.3-dev-SlapOS-009
