--- a/software/davstorage/software.cfg
+++ b/software/davstorage/software.cfg
@@ -64,3 +64,64 @@ python = python2.7
 
 [versions]
 zc.buildout = 1.5.3-dev-SlapOS-009
+Jinja2 = 2.6
+Werkzeug = 0.7.1
+buildout-versions = 1.6
+hexagonit.recipe.cmmi = 1.5.0
+hexagonit.recipe.download = 1.5.0
+meld3 = 0.6.7
+slapos.cookbook = 0.24
+slapos.recipe.template = 1.1
+
+# Required by:
+# slapos.core==0.14
+Flask = 0.7.2
+
+# Required by:
+# slapos.cookbook==0.24
+PyXML = 0.8.4
+
+# Required by:
+# slapos.recipe.template==1.1
+collective.recipe.template = 1.9
+
+# Required by:
+# slapos.cookbook==0.24
+# slapos.core==0.14
+# xml-marshaller==0.9.7
+lxml = 2.3
+
+# Required by:
+# slapos.cookbook==0.24
+netaddr = 0.7.6
+
+# Required by:
+# slapos.core==0.14
+netifaces = 0.4
+
+# Required by:
+# slapos.cookbook==0.24
+# slapos.core==0.14
+# zc.buildout==1.5.3-dev-SlapOS-009
+# zc.recipe.egg==1.3.2
+setuptools = 0.6c12dev-r88846
+
+# Required by:
+# slapos.cookbook==0.24
+slapos.core = 0.14
+
+# Required by:
+# slapos.core==0.14
+supervisor = 3.0a10
+
+# Required by:
+# slapos.cookbook==0.24
+xml-marshaller = 0.9.7
+
+# Required by:
+# slapos.cookbook==0.24
+zc.recipe.egg = 1.3.2
+
+# Required by:
+# slapos.core==0.14
+zope.interface = 3.7.0
