--- a/software/mariadb/software.cfg
+++ b/software/mariadb/software.cfg
@@ -2,7 +2,6 @@
 
 extensions =
   slapos.zcbworkarounds
-  slapos.rebootstrap
 
 find-links +=
     http://www.nexedi.org/static/packages/source/slapos.buildout/
@@ -18,6 +17,9 @@ extends =
   ../../component/rdiff-backup/buildout.cfg
   ../../component/lxml-python/buildout.cfg
   ../../stack/shacache-client.cfg
+  ../../component/gzip/buildout.cfg
+  ../../component/bash/buildout.cfg
+  ../../component/duplicity/buildout.cfg
 
 # Use only quite well working sites.
 allow-hosts =
@@ -33,12 +35,16 @@ allow-hosts =
 
 versions = versions
 
-parts +=
+parts =
 # Create instance template
 #TODO : list here all parts.
   template
   libxslt
   eggs
+  bash
+  gzip
+  rdiff-backup
+  import_script
   instance-recipe-egg
 
 # XXX: Workaround of SlapOS limitation
@@ -55,6 +61,13 @@ section = python2.7
 egg = slapos.cookbook
 module = mysql
 
+[import_script]
+recipe = hexagonit.recipe.download
+url = ${:_profile_base_location_}/${:filename}
+md5sum = 05bd69a5a56c615d1ddd98c1114eb7db
+filename = import-script.sh
+download-only = true
+
 [instance-recipe-egg]
 recipe = zc.recipe.egg
 python = python2.7
@@ -70,12 +83,13 @@ eggs =
 # Default template for the instance.
 recipe = slapos.recipe.template
 url = ${:_profile_base_location_}/instance.cfg
-md5sum = 69c32a67c5640d36ee042d2cfc35843d
+md5sum = e74146eb76d93c57f585f3502dc54a12
 output = ${buildout:directory}/template.cfg
 mode = 0644
+dollar = $
 
 [versions]
-slapos.cookbook = 0.9
+slapos.cookbook = 0.24
 
 # Required by slapos.cookbook==0.9
 slapos.core = 0.4
@@ -89,4 +103,4 @@ hexagonit.recipe.download = 1.5.0
 plone.recipe.command = 1.1
 
 # Use SlapOS patched zc.buildout
-zc.buildout = 1.5.3-dev-SlapOS-005
+zc.buildout = 1.5.3-dev-SlapOS-009
