Use the right entry point for this software release

--- a/software/lampfailover/software.cfg
+++ b/software/lampfailover/software.cfg
@@ -55,7 +55,7 @@ section = python2.7
 
 [instance-recipe]
 egg = slapos.cookbook
-module = mysql
+module = lamp.failover
 
 [import_script]
 recipe = hexagonit.recipe.download
