Fix: adding duplicity to mariadb software.cfg

--- a/software/lampfailover/software.cfg
+++ b/software/lampfailover/software.cfg
@@ -42,6 +42,7 @@ parts =
   gzip
   import_script
   instance-recipe-egg
+  duplicity
 
 # XXX: Workaround of SlapOS limitation
 # Unzippig of eggs is required, as SlapOS do not yet provide nicely working
