--- a/software/mariadb/instance.cfg
+++ b/software/mariadb/instance.cfg
@@ -18,3 +18,7 @@ openssl_binary = ${openssl:location}/bin/openssl
 stunnel_binary = ${stunnel:location}/bin/stunnel
 gzip_binary = ${gzip:location}/bin/gzip
 duplicity_binary = ${buildout:bin-directory}/duplicity
+gzip_binary = ${gzip:location}/bin/gzip
+zcat_binary = ${gzip:location}/bin/zcat
+# Templates
+import_script_template = ${import_script:location}/${import_script:filename}
